@@ -36,6 +36,7 @@
 #include <mach/machine.h>
 #include <machine/locore.h>
 #include <machine/machspl.h>	/* For def'n of splsched() */
+#include <machine/model_dep.h>
 #include <kern/ast.h>
 #include <kern/counters.h>
 #include <kern/cpu_number.h>
